fix(Landing): fix login button going off-screen

--- a/src/style.css
+++ b/src/style.css
@@ -40,6 +40,7 @@ footer {
 
 .header-bar {
   width: 100%;
+  max-width: 1920px;
   display: flex;
   justify-content: space-between;
   align-items: center;
